--- a/src/ProductList.css
+++ b/src/ProductList.css
@@ -188,6 +188,21 @@ body {
 
     
 }
+.product-title{
+    width: 100%;
+    text-align: center;
+    margin: 15px 0;
+}
+.cart-badge {
+    position: absolute;
+    top: 18px;
+    right: 8px;
+    background: red;
+    color: white;
+    font-size: 10px;
+    padding: 2px 6px;
+    border-radius: 50%;
+}
 /* Add Media Query for responsiveness */
 @media (max-width: 768px) {
     .product-card {
